# algorithmic_foundation

./: .gitignore  CMakeLists.txt  functions.cpp  functions.h  functions.py  settings.sty
02_asymptotics/08_assignments/06/: 06.py  06.tex  example.cpp  example.py
04_search_algorithms/03_binary_search_realization/11/: 11.cpp  11.tex
04_search_algorithms/05_binary_search_by_answer/02/: 02.cpp  02.tex
04_search_algorithms/05_binary_search_by_answer/03/: 03.cpp  03.tex
04_search_algorithms/05_binary_search_by_answer/06/: 06.cpp  06.tex
04_search_algorithms/06_assignments/01/: 01.cpp  01.tex
04_search_algorithms/06_assignments/02/: 02.cpp  02.tex
04_search_algorithms/06_assignments/03/: 03.cpp  03.tex
04_search_algorithms/06_assignments/04/: 04.cpp  04.tex
04_search_algorithms/06_assignments/05/: 05.cpp  05.tex
04_search_algorithms/06_assignments/06/: 06.cpp  06.tex
04_search_algorithms/06_assignments/07/: 07.cpp  07.tex
05_two_pointer_technique/06_assignments/05/: 05.tex
05_two_pointer_technique/06_assignments/08/: 08.cpp
06_two_pointer_technique/02_segment_with_a_given_sum/05/: 05.cpp  05.tex
06_two_pointer_technique/03_sorted_arrays/04/: 04.cpp  04.tex
06_two_pointer_technique/04_long_pressed_name/02/: 02.cpp  02.tex
06_two_pointer_technique/06_assignments/01/: 01.cpp  01.tex
06_two_pointer_technique/06_assignments/02/: 02.cpp  02.tex
06_two_pointer_technique/06_assignments/03/: 03.cpp  03.tex
06_two_pointer_technique/06_assignments/04/: 04.tex
06_two_pointer_technique/06_assignments/05/: 05.cpp  05.tex
06_two_pointer_technique/06_assignments/06/: 06.cpp  06.tex
06_two_pointer_technique/06_assignments/07/: 07.cpp  07.tex
06_two_pointer_technique/06_assignments/08/: 08.tex
07_elementary_data_structures/02_linked_list/01_middle_of_the_linked_list/: 01.cpp
07_elementary_data_structures/02_linked_list/03_remove_linked_list_elements/: 03.cpp
07_elementary_data_structures/06_assignments/04/: 04.cpp
07_elementary_data_structures/06_assignments/06/: 06.cpp
07_elementary_data_structures/06_assignments/10/: 10.tex
07_elementary_data_structures/06_assignments/11/: 11.tex
07_elementary_data_structures/06_assignments/12/: 12.tex
07_elementary_data_structures/06_assignments/13/: 13.cpp
08_elementary_data_structures/02_linked_list/01_middle_of_the_linked_list/: 01.cpp  01.tex
08_elementary_data_structures/02_linked_list/02_reverse_linked_list/: 02.cpp  02.tex
08_elementary_data_structures/02_linked_list/03_remove_linked_list_elements/: 03.cpp  03.tex
08_elementary_data_structures/02_linked_list/04_partition_list/: 04.cpp  04.tex
08_elementary_data_structures/06_assignments/01/: 01.cpp  01.tex
08_elementary_data_structures/06_assignments/02/: 02.cpp  02.tex
08_elementary_data_structures/06_assignments/03/: 03.cpp  03.tex
08_elementary_data_structures/06_assignments/04/: 04.cpp  04.tex
08_elementary_data_structures/06_assignments/05/: 05.cpp  05.tex
08_elementary_data_structures/06_assignments/06/: 06.cpp  06.tex
08_elementary_data_structures/06_assignments/07/: 07.cpp  07.tex
08_elementary_data_structures/06_assignments/08/: 08.cpp  08.tex
08_elementary_data_structures/06_assignments/09/: 09.cpp  09.tex
08_elementary_data_structures/06_assignments/10/: 10.cpp  10.tex
08_elementary_data_structures/06_assignments/11/: 11.cpp  11.tex
08_elementary_data_structures/06_assignments/12/: 12.tex
08_elementary_data_structures/06_assignments/13/: 13.cpp  13.tex  solution.cpp
09_sorting/01_introduction/03/: 03.tex
10_heap/04_asymptotics_sorting/03/: 03.tex
10_heap/3_tasks_simple_binary_heap/2_last_stone_weight/: 2.cpp
10_heap/3_tasks_simple_binary_heap/3/: 3.cpp  3.tex
10_heap/3_tasks_simple_binary_heap/4/: 4.cpp  4.tex
10_heap/3_tasks_simple_binary_heap/5/: 5.cpp  5.tex
10_heap/3_tasks_simple_binary_heap/6/: 6.tex
10_heap/4_asymptotics_sorting/2/: 2.cpp  2.tex
10_heap/4_asymptotics_sorting/3/: 3.cpp
10_sorting/01_introduction/03/: 03.cpp  03.tex
10_sorting/06_assignments/01/: 01.cpp  01.tex
10_sorting/06_assignments/02/: 02.cpp  02.tex
10_sorting/06_assignments/03/: 03.cpp  03.tex
10_sorting/06_assignments/04/: 04.cpp  04.tex
10_sorting/06_assignments/05/: 05.cpp  05.tex
10_sorting/06_assignments/06/: 06.cpp  06.tex
10_sorting/06_assignments/07/: 07.cpp  07.tex
10_sorting/06_assignments/08/: 08.cpp  08.tex
10_sorting/06_assignments/09/: 09.cpp  09.tex  example.cpp  example.py
10_sorting/06_assignments/10/: 10.cpp  10.tex  function.cpp
10_sorting/06_assignments/11/: 11.cpp  11.tex
10_sorting/06_assignments/12/: 12.cpp  12.tex  calc_hash.cpp  fill.cpp
10_sorting/06_assignments/13/: 13.cpp  13.tex  ask.cpp
12_graph_algorithms/02_introduction/04/: 04.cpp
12_graph_algorithms/04_breadth-first_search/05/: 05.tex
12_graph_algorithms/2_introduction/2/: 2.tex
12_graph_algorithms/5_loop_search_and_topological_sorting/3_course_shedule_2/: 3.tex
12_graph_algorithms/5_loop_search_and_topological_sorting/5/: 5.cpp  5.tex
12_heap/03_tasks_simple_binary_heap/02_last_stone_weight/: 02.tex
12_heap/03_tasks_simple_binary_heap/03/: 03.tex
12_heap/03_tasks_simple_binary_heap/04/: 04.tex
12_heap/03_tasks_simple_binary_heap/05/: 05.tex
12_heap/03_tasks_simple_binary_heap/06/: 06.cpp  06.tex
12_heap/04_asymptotics_sorting/02/: 02.tex
12_heap/04_asymptotics_sorting/03/: 03.cpp  03.tex
12_heap/04_tasks_simple_binary_heap/03/: 03.cpp
12_heap/04_tasks_simple_binary_heap/04/: 04.cpp  04.tex
12_heap/04_tasks_simple_binary_heap/05/: 05.cpp  05.tex
12_heap/04_tasks_simple_binary_heap/06/: 06.cpp  06.tex
12_heap/05_asymptotics_sorting/02/: 02.cpp
12_heap/05_asymptotics_sorting/03/: 03.tex
12_heap/05_asymptotics_sorting/04/: 04.tex
14_graph_algorithms/02_introduction/02/: 02.cpp  02.tex
14_graph_algorithms/02_introduction/03/: 03.cpp  03.tex
14_graph_algorithms/02_introduction/04/: 04.cpp  04.tex
14_graph_algorithms/03_depth-first_search/02_clone_graph/: 02.cpp  02.tex
14_graph_algorithms/03_depth-first_search/06/: 06.cpp  06.tex
2_asymptotics/2_8/: 6.py
(+147 files in other folders)
