cmake_minimum_required(VERSION 3.14)
project(algorithmic_foundation)

set(CMAKE_CXX_STANDARD 14)


#####################
# 3_search_algorithms
#####################

# 3_binary_search_realization
add_executable(3_search_algorithms__3_binary_search_realization__11
        3_search_algorithms/3_binary_search_realization/11/11.cpp)

# 5_binary_search_by_answer
add_executable(3_search_algorithms__5_binary_search_by_answer__2
        3_search_algorithms/5_binary_search_by_answer/2/2.cpp)

add_executable(3_search_algorithms__5_binary_search_by_answer__3
        3_search_algorithms/5_binary_search_by_answer/3/3.cpp)

add_executable(3_search_algorithms__5_binary_search_by_answer__6
        3_search_algorithms/5_binary_search_by_answer/6/6.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__1
        3_search_algorithms/6_assignments/1/1.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__2
        3_search_algorithms/6_assignments/2/2.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__3
        3_search_algorithms/6_assignments/3/3.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__4
        3_search_algorithms/6_assignments/4/4.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__5
        3_search_algorithms/6_assignments/5/5.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__6
        3_search_algorithms/6_assignments/6/6.cpp)

# 6_assignments
add_executable(3_search_algorithms__6_assignments__7
        3_search_algorithms/6_assignments/7/7.cpp)




############################
# 5_two_pointer_technique
############################

# 2_segment_with_a_given_sum
add_executable(5_two_pointer_technique__2_segment_with_a_given_sum__5
        5_two_pointer_technique/2_segment_with_a_given_sum/5/5.cpp)

# 3_sorted_arrays
add_executable(5_two_pointer_technique__3_sorted_arrays__4
        5_two_pointer_technique/3_sorted_arrays/4/4.cpp)

# 4_long_pressed_name
add_executable(5_two_pointer_technique__4_long_pressed_name__2
        5_two_pointer_technique/4_long_pressed_name/2/2.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__1
        5_two_pointer_technique/6_assignments/1/1.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__2
        5_two_pointer_technique/6_assignments/2/2.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__3
        5_two_pointer_technique/6_assignments/3/3.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__4
        5_two_pointer_technique/6_assignments/4/4.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__5
        5_two_pointer_technique/6_assignments/5/5.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__6
        5_two_pointer_technique/6_assignments/6/6.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__7
        5_two_pointer_technique/6_assignments/7/7.cpp)

# 6_assignments
add_executable(5_two_pointer_technique__6_assignments__8
        5_two_pointer_technique/6_assignments/8/8.cpp)


##############################
# 7_elementary_data_structures
##############################

# 2_linked_list
add_executable(7_elementary_data_structures__2_linked_list__3
        7_elementary_data_structures/2_linked_list/3_remove_linked_list_elements/3.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__01
        7_elementary_data_structures/6_assignments/1/1.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__02
        7_elementary_data_structures/6_assignments/2/2.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__03
        7_elementary_data_structures/6_assignments/3/3.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__04
        7_elementary_data_structures/6_assignments/4/4.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__05
        7_elementary_data_structures/6_assignments/5/5.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__06
        7_elementary_data_structures/6_assignments/6/6.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__07
        7_elementary_data_structures/6_assignments/7/7.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__08
        7_elementary_data_structures/6_assignments/8/8.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__09
        7_elementary_data_structures/6_assignments/9/9.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__10
        7_elementary_data_structures/6_assignments/10/10.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__11
        7_elementary_data_structures/6_assignments/11/11.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__12
        7_elementary_data_structures/6_assignments/12/12.cpp)

# 6_assignments
add_executable(7_elementary_data_structures__6_assignments__13
        7_elementary_data_structures/6_assignments/13/13.cpp)


##############################
# 9_graph_algorithms
##############################

# 2_introduction
add_executable(9_graph_algorithms__2_introduction__2
        9_graph_algorithms/2_introduction/2/2.cpp)

# 2_introduction
add_executable(9_graph_algorithms__2_introduction__3
        9_graph_algorithms/2_introduction/3/3.cpp)

# 2_introduction
add_executable(9_graph_algorithms__2_introduction__4
        9_graph_algorithms/2_introduction/4/4.cpp)

# 3_depth-first_search
add_executable(9_graph_algorithms__3_depth-first_search__2
        9_graph_algorithms/3_depth-first_search/2_clone_graph/2.cpp)

# 3_depth-first_search
add_executable(9_graph_algorithms__3_depth-first_search__5
        9_graph_algorithms/3_depth-first_search/5_redundant_connection/5.cpp)

# 3_depth-first_search
add_executable(9_graph_algorithms__3_depth-first_search__6
        9_graph_algorithms/3_depth-first_search/6/6.cpp)

# 3_depth-first_search
add_executable(9_graph_algorithms__3_depth-first_search__7
        9_graph_algorithms/3_depth-first_search/7/7.cpp)

# 3_depth-first_search
add_executable(9_graph_algorithms__3_depth-first_search__8
        9_graph_algorithms/3_depth-first_search/8/8.cpp)