cmake_minimum_required(VERSION 3.14)
project(algorithmic_foundation)

set(CMAKE_CXX_STANDARD 14)


#####################
# 4_search_algorithms
#####################

# 03_binary_search_realization
add_executable(04_search_algorithms__03_binary_search_realization__11
        04_search_algorithms/03_binary_search_realization/11/11.cpp)

# 05_binary_search_by_answer
add_executable(04_search_algorithms__05_binary_search_by_answer__02
        04_search_algorithms/05_binary_search_by_answer/02/02.cpp)

# 05_binary_search_by_answer
add_executable(04_search_algorithms__05_binary_search_by_answer__03
        04_search_algorithms/05_binary_search_by_answer/03/03.cpp)

# 05_binary_search_by_answer
add_executable(04_search_algorithms__05_binary_search_by_answer__06
        04_search_algorithms/05_binary_search_by_answer/06/06.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__01
        04_search_algorithms/06_assignments/01/01.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__02
        04_search_algorithms/06_assignments/02/02.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__03
        04_search_algorithms/06_assignments/03/03.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__04
        04_search_algorithms/06_assignments/04/04.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__05
        04_search_algorithms/06_assignments/05/05.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__06
        04_search_algorithms/06_assignments/06/06.cpp)

# 06_assignments
add_executable(04_search_algorithms__06_assignments__07
        04_search_algorithms/06_assignments/07/07.cpp)




############################
# 06_two_pointer_technique
############################

# 02_segment_with_a_given_sum
add_executable(06_two_pointer_technique__02_segment_with_a_given_sum__05
        06_two_pointer_technique/02_segment_with_a_given_sum/05/05.cpp)

# 03_sorted_arrays
add_executable(06_two_pointer_technique__03_sorted_arrays__04
        06_two_pointer_technique/03_sorted_arrays/04/04.cpp)

# 04_long_pressed_name
add_executable(06_two_pointer_technique__04_long_pressed_name__02
        06_two_pointer_technique/04_long_pressed_name/02/02.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__01
        06_two_pointer_technique/06_assignments/01/01.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__02
        06_two_pointer_technique/06_assignments/02/02.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__03
        06_two_pointer_technique/06_assignments/03/03.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__04
        06_two_pointer_technique/06_assignments/04/04.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__05
        06_two_pointer_technique/06_assignments/05/05.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__06
        06_two_pointer_technique/06_assignments/06/06.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__07
        06_two_pointer_technique/06_assignments/07/07.cpp)

# 06_assignments
add_executable(06_two_pointer_technique__06_assignments__08
        06_two_pointer_technique/06_assignments/08/08.cpp)


##############################
# 08_elementary_data_structures
##############################

# 02_linked_list
add_executable(08_elementary_data_structures__02_linked_list__03
        08_elementary_data_structures/02_linked_list/03_remove_linked_list_elements/03.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__01
        08_elementary_data_structures/06_assignments/01/01.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__02
        08_elementary_data_structures/06_assignments/02/02.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__03
        08_elementary_data_structures/06_assignments/03/03.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__04
        08_elementary_data_structures/06_assignments/04/04.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__05
        08_elementary_data_structures/06_assignments/05/05.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__06
        08_elementary_data_structures/06_assignments/06/06.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__07
        08_elementary_data_structures/06_assignments/07/07.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__08
        08_elementary_data_structures/06_assignments/08/08.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__09
        08_elementary_data_structures/06_assignments/09/09.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__10
        08_elementary_data_structures/06_assignments/10/10.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__11
        08_elementary_data_structures/06_assignments/11/11.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__12
        08_elementary_data_structures/06_assignments/12/12.cpp)

# 06_assignments
add_executable(08_elementary_data_structures__06_assignments__13
        08_elementary_data_structures/06_assignments/13/13.cpp)


##############################
# 10_sorting
##############################

# 01_introduction
add_executable(10_sorting__01_introduction__03
        10_sorting/01_introduction/03/03.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__01
        10_sorting/06_assignments/01/01.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__02
        10_sorting/06_assignments/02/02.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__03
        10_sorting/06_assignments/03/03.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__04
        10_sorting/06_assignments/04/04.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__05
        10_sorting/06_assignments/05/05.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__06
        10_sorting/06_assignments/06/06.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__07
        10_sorting/06_assignments/07/07.cpp)

# 06_assignments
add_executable(10_sorting__06_assignments__08
        10_sorting/06_assignments/08/08.cpp)


##############################
# 12_heap
##############################

# 03_tasks_simple_binary_heap
add_executable(12_heap__03_tasks_simple_binary_heap__02
        12_heap/03_tasks_simple_binary_heap/02_last_stone_weight/02.cpp)

# 03_tasks_simple_binary_heap
add_executable(12_heap__03_tasks_simple_binary_heap__03
        12_heap/03_tasks_simple_binary_heap/03/03.cpp)

# 03_tasks_simple_binary_heap
add_executable(12_heap__03_tasks_simple_binary_heap__04
        12_heap/03_tasks_simple_binary_heap/04/04.cpp)

# 03_tasks_simple_binary_heap
add_executable(12_heap__03_tasks_simple_binary_heap__05
        12_heap/03_tasks_simple_binary_heap/05/05.cpp)

# 03_tasks_simple_binary_heap
add_executable(12_heap__03_tasks_simple_binary_heap__06
        12_heap/03_tasks_simple_binary_heap/06/06.cpp)

# 04_asymptotics_sorting
add_executable(12_heap__04_asymptotics_sorting__02
        12_heap/04_asymptotics_sorting/02/02.cpp)

# 04_asymptotics_sorting
add_executable(12_heap__04_asymptotics_sorting__03
        12_heap/04_asymptotics_sorting/03/03.cpp)


##############################
# 14_graph_algorithms
##############################

# 02_introduction
add_executable(14_graph_algorithms__02_introduction__02
        14_graph_algorithms/02_introduction/02/02.cpp)

# 02_introduction
add_executable(14_graph_algorithms__02_introduction__03
        14_graph_algorithms/02_introduction/03/03.cpp)

# 02_introduction
add_executable(14_graph_algorithms__02_introduction__04
        14_graph_algorithms/02_introduction/04/04.cpp)

# 03_depth-first_search
add_executable(14_graph_algorithms__03_depth-first_search__02
        14_graph_algorithms/03_depth-first_search/02_clone_graph/02.cpp)

# 03_depth-first_search
add_executable(14_graph_algorithms__03_depth-first_search__05
        14_graph_algorithms/03_depth-first_search/05_redundant_connection/05.cpp)

# 03_depth-first_search
add_executable(14_graph_algorithms__03_depth-first_search__06
        14_graph_algorithms/03_depth-first_search/06/06.cpp)

# 03_depth-first_search
add_executable(14_graph_algorithms__03_depth-first_search__07
        14_graph_algorithms/03_depth-first_search/07/07.cpp)

# 03_depth-first_search
add_executable(14_graph_algorithms__03_depth-first_search__08
        14_graph_algorithms/03_depth-first_search/08/08.cpp)

# 04_breadth-first_search
add_executable(14_graph_algorithms__04_breadth-first_search__03
        14_graph_algorithms/04_breadth-first_search/03_word_ladder/03.cpp)

# 04_breadth-first_search
add_executable(14_graph_algorithms__04_breadth-first_search__04
        14_graph_algorithms/04_breadth-first_search/04/04.cpp)

# 04_breadth-first_search
add_executable(14_graph_algorithms__04_breadth-first_search__05
        14_graph_algorithms/04_breadth-first_search/05/05.cpp)

# 05_loop_search_and_topological_sorting
add_executable(14_graph_algorithms__05_loop_search_and_topological_sorting__03
        14_graph_algorithms/05_loop_search_and_topological_sorting/03_course_shedule_2/03.cpp)

# 05_loop_search_and_topological_sorting
add_executable(14_graph_algorithms__05_loop_search_and_topological_sorting__04
        14_graph_algorithms/05_loop_search_and_topological_sorting/04/04.cpp)

# 05_loop_search_and_topological_sorting
add_executable(14_graph_algorithms__05_loop_search_and_topological_sorting__05
        14_graph_algorithms/05_loop_search_and_topological_sorting/05/05.cpp)